# streamdeck-vlc

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  History.md  LICENSE  README.md  conanfile.txt
com.rgpaul.vlc.sdPlugin/: de.json  en.json  manifest.json
com.rgpaul.vlc.sdPlugin/propertyinspector/: index.html
com.rgpaul.vlc.sdPlugin/propertyinspector/js/: index_pi.js
images/: icons.afdesign
src/: CallBackTimer.hpp  VlcConnectionManager.cpp  VlcConnectionManager.hpp  VlcStatus.cpp  VlcStatus.hpp  VlcStreamDeckPlugin.cpp  VlcStreamDeckPlugin.hpp  macos_pch.hpp  main.cpp  windows_pch.hpp
